Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.08.2022 15:04:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 07:11:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 10. 08. 2022</h5>
+<h5>Čtvrtek, 11. 08. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová</strong>
@@ -57,59 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 10.8.2022</div>
+<div class="nadpis">Čtvrtek 11.8.2022</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Brokolicový krém s ořechy v menu <em title="Mléko">7</em><em title="Skořápkové plody">8</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Brokolicový krém s ořechy samostatně <em title="Mléko">7</em><em title="Skořápkové plody">8</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Svíčková hovězí na smetaně, karlovarský knedlík, brusinky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na máslové zelenině, celerové pyré, kukuřičný klas <em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Grilovaná červená řepa, bramborová kaše, rukolový salát s cherry rajčaty <em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>300g Bavorská bageta s kuřecím masem a bbq omáčkou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">89 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>300g Bavorská bageta se šunkou a sýrem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>50g Mini mrkvový dort <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>250g Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -120,18 +70,23 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s klobásou a krutony </td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené rybí filé, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky </td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí a feferonkou, těstoviny kolínka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kapsa z vepřové pečeně na tálu plněná míchanými vejci se šunkou a žampiony, mačkané brambory s cibulkou</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z vepřové pečeně se šunkou gratinovaný sýrem, celerové pyré, grilovaná karotka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a zelím, smažená cibulka na sádle</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na smetanové omáčce s grilovanou paprikou, pórkem a kukuřicí, špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, řezy z vepřové panenky, vařené vejce, parmazán</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený makový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Těstoviny linquine s boloňským ragú, strouhaný sýr</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung-pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, brokolicové pyré se sýrem, volské oko na šunce, grilované rajče</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené kuřecí medailonky v sýrovém těstíčku, bramborová kaše s máslem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hříbkové omáčce, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený makový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">Novinka</td><td class="menuName">0,33l Pepsi LIMETKA - plechovka</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">Novinka</td><td class="menuName">0,33l Pepsi LIMETKA - plechovka</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Slepičí vývar se zeleninou, masem a domácími nudlemi 1a,3,7,9</td><td class="pricem">45 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí nudličky ze stehenních řízků se žampiony, rajčatovým protlakem, smetanou a oregánem s jasmínovou rýží 1a,6,7</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřové ražniči s cibulí a anglickou slaninou na jehle s opečenými brambory, pikantním dresinkem a trhaným salátem 1a,3,7</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Domácí knedlíky s vejci, cibulkou a uzeným špekem se salátem z nakládaných okurek 1a,3,7</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+</td>
+</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
