--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 08:45:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 09:11:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -132,7 +132,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s reckou rajcatovou salsou s orechy a bylinkami, irsky colcannon {stouchane brambory se zelenou cibulkou a kapustou} salat z cerstve cervene repy s bazalkou 155</li><li>Peceny filet z cerstveho norskeho lososa s reckou rajcatovou salsou s orechy a bylinkami, irsky colcannon, salat z cerstve cervene repy s bazalkou 179</li><li>Marocka pikantni hovezi tazin s pecenou dyni, rajcaty, zelenymi bylinkami a korenim ras el hanout, kuskus, salatek {L} 155</li><li>Doruzova pecena panenska svickova na luzku s fazolovych lusku, gratinovane brambory, salatek 179</li><li>Arabsky smazeny cizrnovy falafel, matovy jogurtovy dip, korenena ryze, salatek 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s okurkovymi tzatziki, pecene baby brambory, salatek 155</li><li>Peceny filet z cerstveho candata s okurkovymi tzatziki, pecene baby brambory, salatek 185</li><li>Ramen s pecenou vonavou krkovici, sazenym vejcem, psenicnymi nudlemi a mladou kapustou v silnem hovezim vyvaru se zelenymi bylinkami {L} 155</li><li>Smazene rizecky z krutich prsou, lehky bavorsky bramborovy salat se zelenou cibulkou a cuketami, citron {L} 179</li><li>Zapecene mlade cukety plnene cervenou cockou s cibulkou a tofu, salatek 155</li></ol>
 </td>
 </tr>
 </table>
