--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 09:11:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 09:37:21</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,49 @@
 <h5>Čtvrtek, 11. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová</strong>
+<strong>Sýrová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Selská kotleta s pečenými bramborami</strong>
+<strong>Smažený kuřecí špíz s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Staročeské kroupy se zelím a uzenou krkovičkou</strong>
+<strong>Špagety aglio olio peperoncino s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími křidélky</strong>
+<strong>Roastbeef na míchaném salátku s bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie se zeleninou, kuřecí špalíčky, brambory, Mrkvička, rýže</strong>
+<strong>Smažený masovo- celerový karbanátek s vařeným bramborem a tatarkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie s pečenou paprikou, zelenina, rýže, kuřecí špalíčky, pečené brambory s cibulkou a slaninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: polníček, červená řepa s kozím sýrem, zeleninový s balkánem</strong>
+<strong>SALÁTY: Těstovinový s uzeným masem a horcicnym dresinkem, míchaná zelenina s balkánským sýrem, těstovinový s červenou řepou a polníčkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
