--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.08.2022 15:10:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 07:13:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 11. 08. 2022</h5>
+<h5>Pátek, 12. 08. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Sýrová</strong>
@@ -64,49 +64,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 11.8.2022</div>
+<div class="nadpis">Pátek 12.8.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Pistáciový cheesecake </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kukuřičná polévka s chorizem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em><em title="Vlčí bob (lupina)">13</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kukuřičná polévka s chorizem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em><em title="Vlčí bob (lupina)">13</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, tzatziki, čerstvá zelenina, pita chléb <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová panenka, houbová omáčka, rozmarýnové brambory, marinovaná zelenina <em title="Mléko">7</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>100g Grilovaný camembert s brusinkami, míchaný listový salát, domácí bageta <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -117,18 +77,23 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s klobásou a krutony </td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátová se zakysanou smetanou a parmazánem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Těstoviny linquine s boloňským ragú, strouhaný sýr</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung-pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, brokolicové pyré se sýrem, volské oko na šunce, grilované rajče</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené kuřecí medailonky v sýrovém těstíčku, bramborová kaše s máslem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hříbkové omáčce, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený makový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zbojnická hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš se šlehačkou, kynuté houskové knedlíky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Špíz s kuřecím masem, paprikou a slaninou, batátové hranolky, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Šenkýrenský mix gril (medailonky z kuřecích prsou, vepřové panenky a vepřové pečeně) smažené hranolky, volské oko </td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, jemná sýrová omáčka s modrým sýrem, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený makový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">Novinka</td><td class="menuName">0,33l Pepsi LIMETKA - plechovka</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">Novinka</td><td class="menuName">0,33l Pepsi LIMETKA - plechovka</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Špenátový krém s máslovými krutony 1a,3,7</td><td class="pricem">45 Kč</td><tr><tr><td class="amount">300g</td><td class="title">U nás dělané bramborové knedlíky plněné trhaným kachním masem s cibulovým zelím a šťávou z výpeku 1a,3,12</td><td class="pricem">165 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené kuřecí řízečky v panko strouhance s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">159 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát s tuňákem, vejcem, černými olivami, hořčičným dresinkem a bagetovými chipsy 1a,3,4,10</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+</td>
+</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
