--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 08:15:07</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 08:46:53</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -76,6 +76,16 @@
 <div class="cena">69 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Kuřecí vývar s celestýnskými nudlemi v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
@@ -87,7 +97,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>300g Wrap s kuřecím masem, bbq omáčka, sýr cheddar,  míchaný zeleninový salát, rajčatová salsa *Na požádání lze připravit jako salát v bezlepkové variantě <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka"><span class="poradi">1. </span>300g Wrap s kuřecím masem, bbq omáčka, sýr cheddar,  míchaný zeleninový salát, rajčatová salsa.      *Na požádání lze připravit jako salát v bezlepkové variantě <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
@@ -129,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s okurkovymi tzatziki, pecene baby brambory, salatek 155</li><li>Peceny filet z cerstveho candata s okurkovymi tzatziki, pecene baby brambory, salatek 185</li><li>Ramen s pecenou vonavou krkovici, sazenym vejcem, psenicnymi nudlemi a mladou kapustou v silnem hovezim vyvaru se zelenymi bylinkami {L} 155</li><li>Smazene rizecky z krutich prsou, lehky bavorsky bramborovy salat se zelenou cibulkou a cuketami, citron {L} 179</li><li>Zapecene mlade cukety plnene cervenou cockou s cibulkou a tofu, salatek 155</li></ol>
+<ol><li>Peceny cerstvy pstruh s kaparovym maslem, kroupy s pecenou zeleninou a bylinkami, salatek 155</li><li>Spagety s uzenym lososem nerka, cerstvymi rajcaty, rimskym salatem a pestem ze susenych rajcat 179</li><li>Indicke kari s hovezim masem, pecenou dyni, rajcaty, jogurtem a garam masala, jasminova ryze 155</li><li>Japonsky burger s karamelizovanym veprovym buckem, pikantnim cuketovym cukemonem, majonezou s celozrnnou horcici a zelenou cibulkou, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s petrzelkou, goudou a spetkou muskatu, lehky bavorsky bramborovy salat s cuketou, zelenou cibulkou a petrzelkou {L} 155 </li></ol>
 </td>
 </tr>
 </table>
