--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 08:46:53</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 09:11:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -139,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s kaparovym maslem, kroupy s pecenou zeleninou a bylinkami, salatek 155</li><li>Spagety s uzenym lososem nerka, cerstvymi rajcaty, rimskym salatem a pestem ze susenych rajcat 179</li><li>Indicke kari s hovezim masem, pecenou dyni, rajcaty, jogurtem a garam masala, jasminova ryze 155</li><li>Japonsky burger s karamelizovanym veprovym buckem, pikantnim cuketovym cukemonem, majonezou s celozrnnou horcici a zelenou cibulkou, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s petrzelkou, goudou a spetkou muskatu, lehky bavorsky bramborovy salat s cuketou, zelenou cibulkou a petrzelkou {L} 155 </li></ol>
+<ol><li>Peceny cerstvy pstruh s kaparovym maslem, kroupy s pecenou zeleninou a bylinkami, salatek (L) 155</li><li>Spagety s uzenym lososem nerka, cerstvymi rajcaty, rimskym salatem a pestem ze susenych rajcat 179</li><li>Indicke kari s hovezim masem, pecenou dyni, rajcaty, jogurtem a garam masala, jasminova ryze 155</li><li>Japonsky burger s karamelizovanym veprovym buckem, pikantnim cuketovym cukemonem, majonezou s celozrnnou horcici a zelenou cibulkou, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s petrzelkou, goudou a spetkou muskatu, lehky bavorsky bramborovy salat s cuketou, zelenou cibulkou a petrzelkou {L} 155 </li></ol>
 </td>
 </tr>
 </table>
