--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 09:36:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.08.2022 10:15:15</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,49 +7,35 @@
 <h5>Pátek, 12. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Sýrová</strong>
+<strong>Kari polévka se zázvorem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený kuřecí špíz s vařeným bramborem a tatarkou</strong>
+<strong>kuřecí Čína s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Špagety aglio olio peperoncino s parmazánem</strong>
+<strong>Lívance s borůvkami a jogurtem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							115,-
 						</span>
 </p>
 <p>
-<strong>Roastbeef na míchaném salátku s bagetkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							147,-
-						</span>
-</p>
-<p>
-<strong>Smažený masovo- celerový karbanátek s vařeným bramborem a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Tilapie s pečenou paprikou, zelenina, rýže, kuřecí špalíčky, pečené brambory s cibulkou a slaninou</strong>
+<strong>TEPLÝ BUFET: Tilapie s pečenou paprikou, zelenina, rýže, kureci roláda se špenátem,pečené brambory s cibulkou a slanino</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Těstovinový s uzeným masem a horcicnym dresinkem, míchaná zelenina s balkánským sýrem, těstovinový s červenou řepou a polníčkem</strong>
+<strong>SALÁTY: Těstovinový s uzeným masem a horcicnym dresinkem, těstovinový s červenou řepou a polníčkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
