--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.08.2022 08:48:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.08.2022 09:10:48</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,7 +7,7 @@
 <h5>Pondělí, 15. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kari polévka se zázvorem</strong>
+<strong>Polévka z červené čočky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
@@ -120,7 +120,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s kaparovym maslem, kroupy s pecenou letni zeleninou a bylinkami, salatek (L) 155</li><li>Spagety s uzenym lososem nerka, cerstvymi rajcaty, rimskym salatem a pestem ze susenych rajcat 179</li><li>Indicke kari s hovezim masem, pecenou dyni, rajcaty, jogurtem a garam masala, jasminova ryze 155</li><li>Japonsky burger s karamelizovanym veprovym buckem, pikantnim cuketovym cukemonem, majonezou s celozrnnou horcici a zelenou cibulkou, pecene brambory, salatek {L} 179</li><li>Smazeny kapustovy rizek s petrzelkou, goudou a spetkou muskatu, lehky bavorsky bramborovy salat s cuketou, zelenou cibulkou a petrzelkou {L} 155 </li></ol>
+<ol><li>Thajske kari s kousky rybich filetu {hejk, makrela, sled}, pecenymi paprikami, cuketou, kokosovym mlekem a arasidy, jasminova ryze 155</li><li>Filet z cerstve norske tresky zapeceny s cerstvymi rajcaty a bazalkou, pecene brambory, salatek 175</li><li>Burrito s trhanym barbecue hovezim, pecenymi palivymi paprikami a cervenymi fazolemi, pecene brambory, salatek {L} 155</li><li>Italske spenatove rizoto s parmezanem a pecenou veprovou panenkou, salatek 179</li><li>Indicky dal z cervene cocky s rajcaty, koriandrem a rimskym kminem, sazene vejce, chlebova placka, salatek 155</li></ol>
 </td>
 </tr>
 </table>
