--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.08.2022 09:10:48</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.08.2022 09:36:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,28 +14,28 @@
 						</span>
 </p>
 <p>
-<strong>kuřecí Čína s rýží</strong>
+<strong>Uzená krkovička s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Lívance s borůvkami a jogurtem</strong>
+<strong>Špagety s rajčatovou omáčkou, kuřecím masem, pestem a patmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie s pečenou paprikou, zelenina, rýže, kureci roláda se špenátem,pečené brambory s cibulkou a slanino</strong>
+<strong>TEPLÝ BUFET: asijská Tilapie, Smetanové brambory, kotleta na žampionech, zelenina, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Těstovinový s uzeným masem a horcicnym dresinkem, těstovinový s červenou řepou a polníčkem</strong>
+<strong>SALÁTY: Míchaný, kus kus s rajčaty a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
