Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.08.2022 08:45:46</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.08.2022 09:09:42</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 16. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka z červené čočky</strong>
+<strong>Bramborová s liškami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Uzená krkovička s bramborovou kaší a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							139,-
-						</span>
-</p>
-<p>
-<strong>Špagety s rajčatovou omáčkou, kuřecím masem, pestem a patmazánem</strong>
+<strong>Smažené žampiony s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: asijská Tilapie, Smetanové brambory, kotleta na žampionech, zelenina, rýže</strong>
+<strong>Segedínský guláš s houskovým knedlíkem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>Ledový salát s kuskusem, grilovanou zeleninou a balkánem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie s cuketou a lilkem, Pečená Vepřová žebra, zelenina, rýže, pečené brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Míchaný, kus kus s rajčaty a kuřecím masem</strong>
+<strong>SALÁTY: šopský, kuskusový s rajčaty a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -135,7 +142,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu {hejk, makrela, sled}, pecenymi paprikami, cuketou, kokosovym mlekem a arasidy, jasminova ryze 155</li><li>Filet z cerstve norske tresky zapeceny s cerstvymi rajcaty a bazalkou, pecene brambory, salatek 175</li><li>Burrito s trhanym barbecue hovezim, pecenymi palivymi paprikami a cervenymi fazolemi, pecene brambory, salatek {L} 155</li><li>Italske spenatove rizoto s parmezanem a pecenou veprovou panenkou, salatek 179</li><li>Indicky dal z cervene cocky s rajcaty, koriandrem a rimskym kminem, sazene vejce, chlebova placka, salatek 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s grilovanym citronem a hummus dipem, libanonsky krupkovy salat s rajcaty, okurkami a zelenymi bylinkami {L} 155</li><li>Peceny filet z cerstveho candata a okounika s grilovanym citronem a hummus dipem, libanonsky krupkovy salat s rajcaty, okurkami a zelenymi bylinkami {L} 185</li><li>Grilovany indonesky veprovy kebab s arasidovou omackou, jasminova ryze, salatek 155</li><li>Indicke jeleni birjany z basmati ryze se zeleninou a rajcaty, okurkove tzatziki, salatek 179</li><li>Spagety s pecenou maslovou dyni, dynovou omackou, pecenymi baby paprikami a cedarem {L} 155</li></ol>
 </td>
 </tr>
 </table>
